fix: [js] bleeding css configuration. oups.

--- a/static/src/css/main.css
+++ b/static/src/css/main.css
@@ -115,7 +115,9 @@
    margin: 0px;
 }
 
-.openerp .oe_form textarea {
+.openerp .oe_form .oe_report_xml_split textarea {
+  position: relative;
+  width: 50%;
   font-size: 10px;
   font-family: monospace;
   height: 522px;
